Wed Jul 25 17:41:43 2001  Ossama Othman  <ossama@uci.edu>

	* ltcf-c.sh:
	* ltcf-cxx.sh:
	* ltconfig:

	  Removed these libtool related files.  New versions of libtool
	  (GNU libtool >= 1.4b) no longer use them.

	* config.guess:
	* config.sub:
	* ltmain.sh:

	  Removed these files.  We no longer need to keep custom copies
	  lieing around since libtool 1.4b includes all of our local
	  changes (i.e. our changes have been folded into the upstream
	  libtool sources).

	* install-sh:
	* missing:
	* mkinstalldirs:

	  Removed these files.  Automake will automatically add these when
	  necessary.

Wed Jul 25 16:29:48 2001  Steve Huston  <shuston@riverace.com>

        * tests/Max_Default_Port_Test.cpp: ACE-ified the code and fixed
          a number of ACE_DEBUG %p directives without a corresponding
          string. Also, closed a 2 handle-per-try handle leak, which
          may have affected test results on some platforms.
        * tests/Max_Default_Port_Test.h: Added a destructor to the
          test class - it's used to close the acceptor handle down.

Wed Jul 25 15:21:22 2001  Krishnakumar B  <kitty@cs.wustl.edu>

        * ace/OS.h:

          Fixed the _XOPEN_SOURCE checking to _XOPEN_SOURCE < 500 to fix
          incorrect declaration of prototype. This fixes the warnings when
          compiling with gcc-3.0. Thanks to Ossama for suggesting the fix.

Wed Jul 25 08:05:45 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

        * tests/Thread_Pool_Reactor_Resume_Test.h:
        * tests/Thread_Pool_Reactor_Resume_Test.cpp: Fixed a subtle race
          condition. This hardly showed up in many of our daily
          builds. The race condition had to be fixed to show the users of
          the cautious approach that one needs to take if they are
          resuming the handle in the application itself.

Tue Jul 24 16:41:57 2001  Joe Hoffert  <joeh@cs.wustl.edu>

        * ace/Thread_Manager.cpp :