@@ -102,8 +102,11 @@
 	  TAO's Audio/Video Streaming Service implementation.
 	</P>
       </LI>
-      <LI><P><A HREF="tao/ssliop/index.html">TAO_SSLIOP: 
-	  </A>
+      <LI><P><A HREF="tao/security/index.html">TAO_Security: </A>
+	  TAO's CORBA Security Service implementation.
+	</P>
+      </LI>
+      <LI><P><A HREF="tao/ssliop/index.html">TAO_SSLIOP: </A>
 	  TAO's SSLIOP protocol implementation.
 	</P>
       </LI>
